--- a/assets/css/contactstyle.css
+++ b/assets/css/contactstyle.css
@@ -1,6 +1,9 @@
 * {
     box-sizing: border-box;
 }
+body{
+    margin: 0px;
+}
 body::after{
     height: 100vh;
 }
@@ -17,6 +20,7 @@ textarea {
 }
 h1{
     font-weight: 500;
+    font-size: 2rem;
 }
 .floating{
     float: left;
