--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,23 +7,7 @@ body{
     background: url(../images/working-internet-technology-239898.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    position: absolute;
 }
-
-  #blackBox{
-    background-color: black;
-    opacity: 0.5;
-    height:100%;
-    width:100%;
-    position: fixed;
-    z-index: -1;
-    float:left;
-    margin:0px;
-  }
 button{
     font-family: 'Oswald', sans-serif;
     background-color: #32CD32;
@@ -65,10 +49,11 @@ img, .borderfit, .textbox, .profile{
     background-color: black;
     margin: auto;
 }
+
+/* Classes */
 .container{
     padding-left: 0px;
     padding-right: 0px;
-    margin-top: 25px;
 }
 .textbox{
     margin: 0px 5%;
@@ -84,9 +69,39 @@ img, .borderfit, .textbox, .profile{
     padding: 0% 1%;
     width: fit-content;
 }
-#myname{
+.spaceBelow{
+    margin-bottom: 20px;
+}
+.sidePad{
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.center{
+    text-align: center;
+    align-content: center;
+}
+.fullWide{
+    width: 100%;
     margin: 0px;
 }
+.title{
+    margin: auto;
+    text-align: center;
+}
+
+/* IDs */
+  #blackBox{
+    background-color: black;
+    opacity: 0.5;
+    height:100%;
+    width:100%;
+    position: fixed;
+    z-index: -1;
+    margin:0px;
+  }
+/* #myname{
+
+} */
 
 @media screen and (min-width: 768px) {
     body::after {
@@ -95,7 +110,7 @@ img, .borderfit, .textbox, .profile{
 }
 @media screen and (min-width: 1024px) {
     body{
-        font-size: 1.5rem;
+        font-size: 1.2rem;
     }
     body::after {
         height: 1366px;
