--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,10 +3,10 @@ body{
     margin-top: 0px;
     color: white;
     text-align: center;
-    background-color: black;
     background: url(../images/working-internet-technology-239898.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
+    /* background-size: cover; */
 }
 button{
     font-family: 'Oswald', sans-serif;
@@ -16,7 +16,6 @@ button{
     padding: 5px 10px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
     font-size: 16px;
     margin: 4px;
     border-radius: 25px;
@@ -99,20 +98,3 @@ img, .borderfit, .textbox, .profile{
     z-index: -1;
     margin:0px;
   }
-/* #myname{
-
-} */
-
-@media screen and (min-width: 768px) {
-    body::after {
-        height: 1024px;
-    }
-}
-@media screen and (min-width: 1024px) {
-    body{
-        font-size: 1.2rem;
-    }
-    body::after {
-        height: 1366px;
-    }
-}
