--- a/assets/css/contactstyle.css
+++ b/assets/css/contactstyle.css
@@ -105,7 +105,9 @@ th,tr {
     display: table;
     clear: both;
 }
-
+#contactName{
+    padding-top: 41px;
+}
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
     .col-25, .col-75, input[type=submit] {
