--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,5 +117,5 @@ img, .borderfit, .textbox, .profile{
     margin-top: 16px;
 }
 #galleryContainer{
-    margin-top: 41px;
+    padding-top: 41px;
 }
